# Taskmaster

./: CMakeLists.txt
empty/include/: Client.hpp  Shell.hpp
empty/src/: main.cpp
include/: CommandHandler.hpp  ConfigParser.hpp  ProcessManager.hpp  Shell.hpp
old_version/: CMakeLists.txt
old_version/include/: Logger.hpp  Server.hpp
old_version/src/: ConfigParser.cpp
src/: Client.cpp  CommandHandler.cpp  Logger.cpp  ProcessManager.cpp  Server.cpp  Shell.cpp  main.cpp
src/config/: taskmaster.yaml
taskmaster/: CMakeLists.txt  log.txt
taskmaster/taskmasterctl/: CMakeLists.txt
taskmaster/taskmasterctl/include/: Client.hpp
taskmaster/taskmasterctl/src/: Client.cpp  main.cpp
taskmaster/taskmasterd/: CMakeLists.txt  log.txt
taskmaster/taskmasterd/include/: Config.hpp  LogManager.hpp  ManagedProcess.hpp  ProcessSupervisor.hpp  Supervisor.hpp
taskmaster/taskmasterd/include/deamon/: Server.hpp
taskmaster/taskmasterd/src/: Config.cpp  LogManager.cpp  Supervisor.cpp  main.cpp
taskmaster/taskmasterd/src/deamon/: Daemonize.cpp  Server.cpp
